# Valueskins---final-

./: .env.local  .navigation.md  ADVANCED_SEARCH_SYSTEM.md  BACKEND_INTEGRATION_COMPLETE.md  BACKUP_RESTORE.md  DEAL_REVIEW_COMPLETION_SUMMARY.md  DEAL_REVIEW_SYSTEM.md  DELIVERY_CHECKLIST.md  ENV_SETUP.md  EVENTS_MARKETPLACE_INTEGRATION.md  FRONTEND_BACKEND_INTEGRATION.md  INTEGRATION_GUIDE.md  OAUTH_SETUP_README.md  PRODUCTION_SETUP_GUIDE.md  PROFILE_CARD_SYSTEM.md  README.md  REALTIME_IMPLEMENTATION_COMPLETE.md  RENDER_DEPLOYMENT_GUIDE.md  REVENUE_PROTECTION_INDEX.md  SEARCH_QUICK_START.md  SEARCH_SYSTEM_SUMMARY.md  algorithm.md  package.json  render.yaml  setup-env.sh
.claude/: CLAUDE.md
.github/: copilot-instructions.md
backend/: Cargo.toml  run-migrations.sh
backend/account_service/: Cargo.toml
backend/api_gateway/: Cargo.toml
backend/auth_service/: Cargo.toml
backend/auth_service/src/: account_auth.rs  apple_oauth.rs  error.rs  lib.rs  phone_auth.rs  session.rs  token.rs  two_factor.rs
backend/auth_service/tests/: integration_test.rs
backend/events_service/: Cargo.toml  PRODUCTION_EVENT_LIFECYCLE.md
backend/guardian_service/: Cargo.toml
backend/identity_service/: Cargo.toml
backend/identity_service/src/: age_verification.rs  document_verification.rs  handlers.rs  kyc.rs  lib.rs  models.rs
backend/migrations/: 20240401000000_trust_verification_core.sql  20240402000000_trust_verification_seed.sql  20240403000000_moderation_service.sql  20250101000000_domain_role_tag_search.sql  20250101000001_seed_domains_roles.sql  20250102000000_event_management.sql  20250103000000_event_lifecycle_intelligence.sql  20250518000000_event_third_party_tagging.sql  20250519000000_unified_accounts.sql  20250519000001_migrate_existing_users.sql  20250519000002_event_full_creation_schema.sql  (+11 more)
backend/search_service/: Cargo.toml
backend/search_service/src/: models.rs
backend/trust_service/: Cargo.toml
backend/trust_service/src/: badge_engine.rs  calculator.rs  handlers.rs  lib.rs  models.rs  service.rs
frontend/: package.json  tsconfig.tsbuildinfo
marketplace/: .env.local  CONSENT_MANAGEMENT.md  DATABASE_SETUP.md  DEPLOYMENT_CHECKLIST.md  INCIDENT_RESPONSE.md  PRODUCTION_ARCHITECTURE.md  README_PRODUCTION.md  REVENUE_PROTECTION_GUIDE.md  REVENUE_PROTECTION_INTEGRATION.md  UPDATED_FEATURES.md  VENDOR_COMPLIANCE.md  next.config.js  next.config.ts  package.json  simple-server.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
marketplace 2/: package.json  scratch.js  tsconfig.tsbuildinfo
razorpay payment/: README.md
safety/: BETA_ARCHITECTURE.md  THINGS_LEFT_TO_BUILD.md  TRUST_VERIFICATION_ARCHITECTURE.md  trust_verification_system_prompt.md
(+408 files in other folders)
