[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
jsonwebtoken = "9.2"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "ipnetwork"] }
urlencoding = "2.1"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
base32 = "0.5"
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
