[package]
name = "search_service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
auth_service = { path = "../auth_service" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
actix-web = "4.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
